test_scripts/errors/dict_from_non_pairs.shm
// dict() requires an iterable of (key, value) pairs; a bare value is not a pair.
let d = dict([1, 2])
