test_scripts/errors/dict_from_non_pairs.stderr
 1 | // dict() requires an iterable of (key, value) pairs; a bare value is not a pair.
 2 | let d = dict([1, 2])
             ^^^^^^^^^^^^
Error: dict() expects an iterable of (key, value) pairs, got int
